# InsightCart

./: .gitignore  03.ipynb  README.md  app.py  prediction_utils.py  pyproject.toml  requirements.txt
model/: RNN (1).ipynb
models/: tfidf.pkl  tfidf_xgb.pkl  tokenizer.pkl  xgb_model.pkl
notebooks/: 01_data_cleaning.ipynb  02_eda.ipynb  03_data_preprocessing.ipynb  04_Model-1_Training.ipynb  05_Model-2_Training.ipynb  06_Model-3_XGBoost.ipynb  07_Model-4_LSTM.ipynb  08_mlflow_random_forest.ipynb
pages/: dataset_explorer.py  eda_dashboard.py  home.py  lstm_predictor.py  random_forest_predictor.py  tuned_rf_predictor.py  xgb_predictor.py
