[project]
name = "insightcart"
version = "0.1.0"
description = "E-commerce customer review sentiment analysis platform using machine learning and deep learning."
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=1.26.4,<2.2.0",
    "pandas>=2.2.2,<3.0.0",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",

    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",

    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "keras>=3.14.1",
    "keras-tuner>=1.4.8",

    "nltk>=3.9.4",
    "contractions>=0.1.73",

    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jedi==0.19.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]